# status-ping

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 479687056ba7_initial_schema_users_monitors_check_.py
src/app/: auth.py  checker.py  config.py  database.py  main.py  plans.py  scheduler.py  schemas.py
src/app/models/: __init__.py  check_result.py  incident.py  monitor.py  status_page.py  user.py
src/app/routers/: auth.py  monitors.py  pages.py  status.py
src/app/templates/: base.html  dashboard.html  landing.html  login.html  monitor_detail.html  signup.html  status_page.html
tests/: conftest.py  test_auth.py  test_checker.py  test_health.py  test_monitors.py  test_status_page.py
